force-app/main/default/objects/MUSW__Proceeding__c/MUSW__Proceeding__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Proceeding</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proceedings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>