force-app/main/default/objects/MUSW__Proceeding__c/fields/MUSW__Authority__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>eg. Commission, Board</description>
    <label>Authority</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proceedings Presided Over</relationshipLabel>
    <relationshipName>Proceedings</relationshipName>
    <type>Lookup</type>
</CustomField>