force-app/main/default/objects/MUSW__Proceeding__c/fields/MUSW__Location__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coutroom #1</fullName>
            </value>
            <value>
                <fullName>Coutroom #2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>