force-app/main/default/objects/MUSW__Proceeding__c/fields/MUSW__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Start_Date_Time__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>