force-app/main/default/objects/MUSW__Proceeding__c/fields/MUSW__Title__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning &amp; Zoning Hearing</fullName>
                <default>true</default>
                <label>Planning &amp; Zoning Hearing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>