force-app/main/default/objects/MUSW__Proceeding__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hearing</fullName>
                <default>true</default>
                <label>Hearing</label>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>